Ensure code snippets are visible when torchlight highlighting is broken

--- a/resources/css/_code.css
+++ b/resources/css/_code.css
@@ -44,6 +44,7 @@ pre .copyBtn:active {
 }
 
 pre code.torchlight {
+    color: white;
     display: block;
     min-width: max-content;
     padding-top: 1rem;
